--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -41,3 +41,258 @@ tr {
     }
   }
 }
+
+#vue-app {
+  h2 {
+    color: #444444;
+    font-size: 24px;
+    letter-spacing: 0;
+    line-height: 29px;
+    font-weight: 600;
+  }
+  tr {
+    cursor: pointer;
+    @media screen and (max-width: 768px) {
+      border-bottom: 1px solid #444;
+    }
+    &:hover {
+      opacity: .5;
+      background: transparent;
+    }
+    th {
+      @media screen and (max-width: 768px) {
+        display: none;
+      }
+    }
+    td {
+      width: 26%;
+      &:first-child {
+        min-width: 10px;
+        width: 10%;
+      }
+      &:last-child {
+        min-width: 120px;
+        width: 10%;
+      }
+      @media screen and (max-width: 768px) {
+        display: block;
+        width: 100%;
+        background-color: #ffffff;
+        &:first-child,
+        &:last-child
+         {
+          width: 100%;
+        }
+      }
+    }
+  }
+  .VueTables {
+    nav {
+      text-align: right;
+      p {
+        text-align: right;
+      }
+    }
+    .multiselect-before-filter {
+      width: 30%;
+      display: inline-block;
+      vertical-align: top;
+      @media screen and (max-width: 768px) {
+        width: 100%;
+        display: block;
+      }
+      .multiselect__content-wrapper {
+        border: 2px solid #0f4d90;
+        border-top: 0px;
+        width: calc( 100% + 2px );
+        margin-top: -2px;
+        padding-bottom: 30px;
+        @media screen and (max-width: 768px) {
+          width: 100%;
+        }
+      }
+      .multiselect__tags {
+        border-radius: 0px;
+        margin-right: -2px;
+        border: 2px solid #0f4d90;
+        background: white;
+        min-height: 3.8rem;
+        padding: .57143rem;
+        @media screen and (max-width: 768px) {
+          margin-right: 0px;
+          margin-bottom: 20px;
+        }
+        .multiselect__placeholder {
+          padding-top: 5px;
+          font-size: 1.14286rem;
+          font-weight: normal;
+          line-height: 1.5;
+          margin-bottom: 0px;
+        }
+      }
+      .multiselect__select:before {
+        border-color: #0f4d90 transparent transparent;
+        border-width: 7.5px;
+        top: 100%;
+        border-radius: 2px;
+      }
+      .multiselect--active {
+        .multiselect__select {
+          margin-top: -29px;
+          transform: none;
+          &:before {
+            border-color: transparent transparent #0f4d90;
+          }
+        }
+        input {
+          border: 0px;
+          margin-bottom: 0px;
+          position: absolute;
+          padding: 0px;
+          max-width: 80%;
+        }
+      }
+      .multiselect__single {
+        padding-top: 5px;
+        font-size: 1.14286rem;
+        font-weight: normal;
+        line-height: 1.5;
+        margin-bottom: 0px;
+      }
+      .multiselect__content-wrapper {
+        border-bottom-right-radius: 0px;
+        border-bottom-left-radius: 0px;
+      }
+      
+    }
+    .multiselect__content {
+      .multiselect__option {
+        min-height: 20px;
+        color: #0F4D90;
+        font-family: 'Montserrat';
+        font-size: 14px;
+        letter-spacing: 0;
+        line-height: 2px;
+        background-color: #ffffff;
+        font-weight: bold;
+        span {
+          padding: 4px 14px;
+          height: auto;
+        }
+        &.multiselect__option--selected {
+          &:after {
+            display: none;
+          }
+        }
+      }
+      .multiselect__option--highlight {
+        color: #ffffff;
+        background-color: #0F4D90;
+        &:after {
+          display: none;
+        }
+      }
+    }
+    .VueTables__search-field {
+      width: 70%;
+      display: inline-block;
+      @media screen and (max-width: 768px) {
+        width: 100%;
+        display: block;
+      }
+    }
+    thead {
+      tr {
+        th {
+          padding: 20px 1rem;
+        }
+      }
+    }
+    .row {
+      margin: 0px; 
+    }
+    .VueTables__search-field {
+      label {
+        display: none;
+      }
+      input {
+        border: 2px solid #0f4d90;
+        background: white;
+        min-height: 3.8rem;
+      }
+    }
+    .VueTables__search {
+      .fa-search {
+        float: right;
+        position: relative;
+        margin-top: -69px;
+        color: white;
+        background-color: #0f4d90;
+        font-weight: 400;
+        padding: 0.4rem;
+        height: 3.7rem;
+        width: 4rem;
+        font-size: 2rem;
+        text-align: center;
+        padding-top: 13px;
+      }
+    }
+    .table-info {
+      margin: 17px 50px;
+      @media screen and (max-width: 768px) {
+        margin: 17px 17px;
+      }
+      span {
+        display: inline-block;
+        vertical-align: top;
+        &.table-message {
+          width: calc(100% - 217px);
+          @media screen and (max-width: 768px) {
+            width: calc(100% - 65px);
+          }
+        }
+        &.table-button {
+          @media screen and (max-width: 768px) {
+            display: block;
+          }
+        }
+        i {
+          width: 50px;
+          margin-right: 15px;
+        }
+        p {
+          color: #444444;
+          font-family: "Open Sans";
+          font-size: 12px;
+          letter-spacing: 0;
+          line-height: 17px;
+        }
+        button {
+          margin-left: 25px;
+          background-color: #0F4D90;
+          @media screen and (max-width: 768px) {
+            margin-top: 10px;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+          }
+          a {
+            text-transform: initial;
+            padding: 8px 26px;
+            color: #fff;
+            font-family: "Open Sans";
+            font-size: 12px;
+            letter-spacing: 0;
+            line-height: 17px;
+            font-weight: 600;
+          }
+        }
+      }
+    }
+    &.noMultiselect {
+      .VueTables__search-field {
+        width: 100%;
+      }
+    }
+  }
+}
