--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -43,12 +43,17 @@ tr {
 }
 
 #vue-app {
+  .columns {
+    padding: 0px;
+  }
+  .row {
+    margin: 0px;
+  }
   h2 {
     color: #444444;
     font-size: 24px;
     letter-spacing: 0;
     line-height: 29px;
-    font-weight: 600;
   }
   tr {
     cursor: pointer;
